# openmetadata-cli

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: client.rs  config.rs  error.rs  main.rs  output.rs
src/auth/: jwt.rs  mod.rs  sso.rs
src/commands/: auth.rs  completions.rs  configure.rs  describe.rs  edit.rs  export.rs  glossary.rs  import.rs  lineage.rs  mcp.rs  mod.rs  quality.rs  raw.rs  search.rs  sync.rs  tag.rs
src/mcp/: mod.rs  tools.rs
src/spec/: dynamic.rs  index.rs  mod.rs  parser.rs  request.rs
src/util/: csv.rs  entity.rs  fqn.rs  mod.rs
tests/: csv_commands.rs  dynamic_commands.rs  mcp_server.rs  smart_commands.rs
tests/fixtures/: mini-spec.json
