[package]
name = "omd"
version = "0.3.0"
edition = "2021"
description = "Command-line tool for OpenMetadata"
authors = ["Allen Saji <allensaji04@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/Allen-Saji/openmetadata-cli"
keywords = ["cli", "openmetadata", "metadata", "data-catalog"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "omd"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
thiserror = "1"
anyhow = "1"
colored = "2"
comfy-table = "7"
dialoguer = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
